--- a/backend/AuthService/src/main/resources/application.yml
+++ b/backend/AuthService/src/main/resources/application.yml
@@ -1,15 +1,5 @@
 spring:
   application:
     name: auth-service
-  datasource:
-    url: jdbc:mysql://localhost:3306/zauthdb
-    username: root
-    password: Realme6G90T
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-      dialect: org.hibernate.dialect.MySQL5Dialect
+  profiles:
+    active: dev
