--- a/backend/Order-service/src/main/resources/application-dev.yml
+++ b/backend/Order-service/src/main/resources/application-dev.yml
@@ -1,4 +1,3 @@
-
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/orderdb
@@ -22,3 +21,5 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+    register-with-eureka: true
+    fetch-registry: true
